# django-spurl

./: .coverage  .gitignore  .travis.yml  CHANGES  CHANGES.rst  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
spurl/: __init__.py  tests.py
spurl/templatetags/: spurl.py
