[metadata]
name = django-spurl
version = 0.6.8
description = A Django template library for manipulating URLs.
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
author = Jamie Matthews
author_email = jamie.matthews@jamesturk.net
maintainer = Basil Shubin
maintainer_email = basil.shubin@gmail.com
url = https://github.com/j4mie/django-spurl/
download_url = https://github.com/j4mie/django-spurl/zipball/master
license = Public Domain
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: Public Domain
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    urlobject>=2.4.0
    six

[options.extras_require]
develop =
    tox
    django
    nose
test =
    coverage
    nose

[bdist_wheel]
# No longer universal (Python 3 only) but leaving this section in here will
# trigger zest to build a wheel.
universal = 0

[flake8]
# Some sane defaults for the code style checker flake8
# black compatibility
max-line-length = 88
# E203 and W503 have edge cases handled by black
extend-ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs

[nosetests]
verbosity = 1
detailed-errors = 1
with-coverage = 1
cover-package = spurl
